# transit_notification

./: .gitignore  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  README.rst  old_requirements.txt  pyproject.toml  requirements.txt  requirements_old.txt  setup.cfg  setup.py
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  requirements.txt  usage.rst
test_jsons/: vehicle_monitoring.json
tests/: __init__.py  conftest.py  create_test_jsons.py  test_app.py  test_comparison_jsons.py  test_db_commands.py  test_factory.py  test_routes.py  test_transit_notification.py  test_vehicle.py
tests/test_input_jsons/: holidays.json  lines.json  operators.json  patterns.json  shape.json  stop_monitoring.json  stop_monitoring_modified.json  stop_places.json  stop_timetable.json  stop_timetable_15553.json  stop_timetable_15557.json  stop_timetable_modified.json  stops.json  vehicle_monitoring_modified.json
tests/test_jsons/: test_operators.json
transit_notification/: __init__.py  app.py  cli.py  config_helper.py  db.py  db_commands.py  env_template  models.py  routes.py  scratch_config_helper.py  stop.py  system_monitor.py  transit_notification.py  vehicle.py  views.py
transit_notification/templates/: base.html  dropdown.html  dynamic_dropdown.html  index.html  setup.html  show_etas.html  show_lines.html  show_operators.html  show_stops.html  show_stops_single_direction.html
